--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-postcss": "^8.0.0",
+    "netlify-cli": "^17.34.3",
     "tailwindcss": "^1.6.2"
   }
 }
